gateway: implemented annotations
